--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <!-- moved current day into container div -->
+      <p id="currentDay" class="lead"></p>
       <!-- Timeblocks go here -->
     </div>
 
